Addition of js/ros.js file, this js file contains the information of the RPi's IP address for the websocket connection. It is used by the other jscripts (sensor-imu, sensor-lidar, manage)

--- a/css/styles.css
+++ b/css/styles.css
@@ -114,3 +114,8 @@ a.recordOn {
     color: white;
     background : lightgreen;
 }
+
+#shutdownButton:hover {
+  background: crimson;
+  color : white;
+}
